--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body{
       border-width: thick;
       border-style: solid;
       margin:5vh;
-      background:url('../images/David.jpg');
+      background:url('../images/david.jpg');
       background-repeat: no-repeat;
       background-position:center;
       background-size:cover;
