--- a/style.css
+++ b/style.css
@@ -1,19 +1,21 @@
-h1{font-size: 2em;}
-h3{font-size: 1.5em;}
-p{font-size: 1.25em;}
+h1{font-size: 1.5em;}
+h3{font-size: 1.25em;margin: 1.5vh;}
+p, li{font-size: 1.15em;margin: 1.5vh 2.5vh;}
+
 
 body{
-  background:url('../images/website-pic.jpg');
+  background:url('../images/mobile-website-pic.jpg');
   background-repeat: no-repeat;
-  background-position:top center;
+  background-position:0 0vh;
   background-attachment: fixed;
   background-size:contain;
+  width:100%;
 }
   #topBar {
     display:flex;
     align-items: center;
     justify-content: space-between;
-    height: 7vh;
+    height: 8vh;
     background-color: #485058;
     color:#F1ECE9;
     padding:0 1vw;
@@ -23,25 +25,10 @@ body{
       margin-left: 1vw;
     }
     #topBar ul {
-      width:50vw;
-      height:100%;
-      display: flex;
-      justify-content:flex-end;
-      list-style-type: none;
-      overflow: hidden;
+      display: none;
     }
-
-      #topBar li {
-        display:block;
-        text-align: center;
-        width: 10vw;
-        height: 100%;
-        line-height:7vh;
-        background-color:;
-        margin:0;
-      }
   #header {
-    height:85vh;
+    height:80vh;
     background-color:RGBA(254,254,254, 0);
     display: flex;
     flex-direction: column;
@@ -49,14 +36,14 @@ body{
     justify-content: center;
   }
     #profileImage {
-      margin:5vh;
+      margin:2vh;
       background:url('../images/david-profile.jpg');
       background-repeat: no-repeat;
       background-position:center;
       background-size:cover;
     }
     #headerContent {
-      width: 35vw;
+      width: 75vw;
       height: 15vh;
       display: flex;
       flex-direction: column;
@@ -73,17 +60,19 @@ body{
     background-color: #A6A5A1;
   }
   #aboutMe {
+    height: 190vh;
     background-color: #A6A5A1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
   }
     #aboutMeContent {
       display: flex;
-      justify-content: center;
+      flex-direction: column;
+      justify-content: space-evenly;
       align-items: center;
-      height: 80%;
+      height: 175vh;
       width: 100%;
     }
       #aboutMeImages {
@@ -91,8 +80,9 @@ body{
         flex-wrap:wrap;
         justify-content: space-evenly;
         align-items: center;
-        height: 100%;
-        width: 35vw;
+        height: 45vh;
+        width: 95vw;
+        margin:2vh;
         /*background-color: red;*/
       }
         #aboutMeImage {
@@ -114,15 +104,12 @@ body{
           background-size:cover;
         }
       #aboutMeText {
-        height: 100%;
-        width: 65vw;
-
+        width: 95vw;
         display:flex;
         flex-direction:column;
         align-items: flex-start;
         text-align: left;
         justify-content: center;
-        /*background-color: blue;*/
       }
         #aboutMeText h3 {
           margin: 1.5vh;
@@ -131,10 +118,123 @@ body{
           margin: 1.5vh 2.5vh;
 
         }
-  .mainDivs {
-    height:65vh;
-    width: 100vw;
+  #skew2R {
+    background-color:#F1ECE9;
   }
+  #programming {
+    background-color:#F1ECE9;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height:165vh;
+  }
+    #programmingContent {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+      height: 85%;
+      width: 100%;
+    }
+      #programmingText {
+        width:95vw;
+        display:flex;
+        flex-direction:column;
+        align-items: flex-start;
+        text-align: left;
+        justify-content: center;
+      }
+      #programmingImage {
+        height:65vw;
+        width: 65vw;
+        background-color: red;
+      }
+  #skew3L {
+    background-color: #A6A5A1;
+  }
+  #projects {
+    background-color: #A6A5A1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    height:250vh;
+  }
+    #projects h1 {
+      margin: 1vh;
+    }
+    #projectsContent {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+      align-items: center;
+    }
+      .projectItems {
+        width: 95vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        align-items: center;
+        margin:1vw;
+      }
+        .projectImages {
+          width: 45vh;
+          height:45vh;
+          background-color: red;
+          margin-bottom: 1vh;
+        }
+  #skew4R {
+    background-color:#F1ECE9;
+  }
+  #contact {
+    height:125vh;
+    background-color: #F1ECE9;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+    #contact h1 {
+      margin:1vh;
+    }
+    #contactContent {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+    flex-wrap: wrap;
+  }
+    .contactDivWrapper {
+        line-height: normal;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        margin:1.5vw;
+    }
+      .contactDiv {
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size:105%;
+      }
+
+      #GitLink {
+        background-image: url(../images/logos/github.png);
+      }
+      #FacebookLink {
+        background-image: url(../images/logos/facebook.png);
+      }
+      #KwadYoutubeLink {
+        background-image: url(../images/logos/youtube.png);
+      }
+      #MainYoutubeLink {
+        background-image: url(../images/logos/youtube.png);
+      }
+      #RotorBuildsLink {
+        background-image: url(../images/logos/rotorbuilds.png);
+      }
   .imageDiv {
     height: 25vh;
     width: 25vh;
@@ -142,12 +242,12 @@ body{
     border-radius: 30vh;
     border-width: thick;
     border-style: solid;
-    background-color: black;
+    background-color: #F1ECE9;
   }
   .skew {
     content: '';
     width:100%;
-    height:10vh;
+    height:7vh;
     position: absolute;
     top:inherit;
     margin-top:-3%;
