--- a/newStyle.css
+++ b/newStyle.css
@@ -1,4 +1,4 @@
-h1{font-size: 1.5em; margin-bottom:3vh;}
+h1{font-size: 1.5em; margin-bottom:3vh; font-family: 'Righteous', cursive;}
 h3{font-size: 1.25em;margin: 1.5vh;}
 p, li{font-size: 1.05em;margin: 1.5vh 2.5vh;}
 
