--- a/newStyle.css
+++ b/newStyle.css
@@ -3,14 +3,23 @@ h3{font-size: 1.25em;margin: 1.5vh;}
 p, li{font-size: 1.05em;margin: 1.5vh 2.5vh;}
 
 
-body{
-  background:url('../images/mobile-website-pic.jpg');
-  background-repeat: no-repeat;
-  background-position:center 0;
-  background-attachment: fixed;
-  background-size:auto 100vh;
-  width:100%;
+.images {
+  z-index: -1;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  position: fixed;
 }
+
+  .column {
+      -ms-flex: 49%;
+      flex: 49%;
+      max-width: 49%;
+  }
+
+    .column img {
+      width: 100%;
+    }
 .mainDivs {
   padding-top:5vh;
   padding-bottom:5vh;
@@ -257,11 +266,13 @@ body{
       height:30vh;
     }
 }
-
-@media only screen and (min-width:1024px){
-  body{
-    background-image: url('../images/website-pic.jpg')
+@media only screen and (min-width:980px){
+  .column {
+    flex: 33%;
+    max-width: 33%;
   }
+}
+@media only screen and (min-width:1024px){
       #headerContent {
         width:45vw;
       }
@@ -311,6 +322,9 @@ body{
         }
         #project3 {
 
+        }
+        #project4 {
+          flex-direction: row-reverse;
         }
 
   .imageDiv {
